  * view, vfilter: Add support for filtering tags and values out of a view,
    using !tag and field!=value.
  * vadd: Allow listing multiple desired values for a field.
  * view: Refuse to enter a view when no branch is currently checked out.
  * metadata: To only set a field when it's not already got a value, use
    -s field?=value
  * Run .git/hooks/pre-commit-annex whenever a commit is made.

 -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 14:52:15 -0400

git-annex (5.20140227) unstable; urgency=medium

  * metadata: Field names limited to alphanumerics and a few whitelisted
    punctuation characters to avoid issues with views, etc.
  * metadata: Field names are now case insensative.
  * When constructing views, metadata is available about the location of the
    file in the view's reference branch. Allows incorporating parts of the
    directory hierarchy in a view.
    For example `git annex view tag=* podcasts/=*` makes a view in the form
    tag/showname.
  * --metadata field=value can now use globs to match, and matches
    case insensatively, the same as git annex view field=value does.
  * annex.genmetadata can be set to make git-annex automatically set
    metadata (year and month) when adding files.
  * Make annex.web-options be used in several places that call curl.
  * Fix handling of rsync remote urls containing a username,
    including rsync.net.
  * Preserve metadata when staging a new version of an annexed file.
  * metadata: Support --json
  * webapp: Fix creation of box.com and Amazon S3 and Glacier
    repositories, broken in 5.20140221.
  * webdav: When built with DAV 0.6.0, use the new DAV monad to avoid
    locking files, which is not needed by git-annex's use of webdav, and
    does not work on Box.com.
  * webdav: Fix path separator bug when used on Windows.
  * repair: Optimise unpacking of pack files, and avoid repeated error
    messages about corrupt pack files.