@@ -22,6 +22,8 @@ git-annex (5.20140228) UNRELEASED; urgency=medium
   * metadata: To only set a field when it's not already got a value, use
     -s field?=value
   * Run .git/hooks/pre-commit-annex whenever a commit is made.
+  * sync: Automatically resolve merge conflict between and annexed file
+    and a regular git file.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 14:52:15 -0400
 
